# bitcoin-node

./: .gitignore  Cargo.toml  README.md
indexes/blocks.bin/: ix-0  ix-1  ix-10  ix-100  ix-101  ix-102  ix-103  ix-104  ix-105  ix-106  ix-107  ix-108  ix-109  ix-11  ix-110  ix-111  ix-112  ix-113  ix-114  ix-115  ix-116  ix-117  ix-118  ix-119  ix-12  ix-120  ix-121  ix-122  ix-123  ix-124  ix-125  ix-126  ix-127  ix-128  ix-129  ix-13  ix-130  ix-131  ix-132  ix-133  (+960 more)
src/: app_manager.rs  config.rs  errores.rs  lib.rs  log.rs  main.rs  nodo.conf  parse_args.rs
src/blockchain/: block.rs  blockheader.rs  file.rs  file_manager.rs  header.rs  index.rs  mod.rs  node.rs  proof_of_work.rs  transaction.rs
src/common/: base58.rs  decoder.rs  mod.rs  uint256.rs  utils_bytes.rs  utils_bytes_conversion.rs  utils_data.rs  utils_file.rs  utils_timestamp.rs
src/connection/: connection.rs
src/gtk/: window.glade  window.glade~
src/interface/: mod.rs  public.rs  view.rs  window.glade  window.glade~
src/merkle_tree/: merkle_node.rs  merkle_root.rs  mod.rs
src/messages/: blocks.rs  getdata.rs  getheaders.rs  header.rs  headers.rs  messages_header.rs  mod.rs  ping_pong.rs  version.rs
src/protocol/: admin_connections.rs  block_broadcasting.rs  block_download.rs  blockchain_download.rs  connection.rs  header_download.rs  initial_block_download.rs  mod.rs  send_tx.rs  server_node.rs
src/test_files/: config_file_con_todos_los_formatos.conf  test_1.conf  test_2.conf  test_3.conf
src/wallet/: mod.rs  transaction_manager.rs  user.rs  uxto_set.rs
tests/: integration_tests.rs
