[package]
name = "los_rustybandidos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
bs58 = "0.5.0"
chrono = "0.4.24"
gio = "0.17.9"
glib = "0.17.9"
gtk = "0.17.1"
pango-sys = "0.17.10"
rand = "0.8.5"
secp256k1 = "0.27.0"
